week two checkpoint for the hamming file.